@@ -1,0 +1,9 @@
+ServerEvents.recipes(event => {
+    const mappings = [
+        { input: 'kubejs:stone_pebble', output: 'minecraft:cobblestone'},
+        { input: 'kubejs:andesite_pebble', output: 'minecraft:andesite'}
+    ]
+    mappings.forEach(recipe => {
+        event.shapeless(recipe.output, Item.of(recipe.input, 4))
+    })
+})
